2014-07-30  Benjamin Poulain  <benjamin@webkit.org>

        Cleanup DetailsMarkerControl
        https://bugs.webkit.org/show_bug.cgi?id=135429

        Reviewed by Andreas Kling.

        Remove the override of shadowPseudoId(). This is a simple type of shadowId,
        it should use the generic pseudo() path.

        Move DetailsMarkerControl::create() out-of-line. One could justify inlining the constructor,
        inlining the ::create() function has little value.

        * html/shadow/DetailsMarkerControl.cpp:
        (WebCore::DetailsMarkerControl::create):
        (WebCore::DetailsMarkerControl::DetailsMarkerControl):
        (WebCore::DetailsMarkerControl::rendererIsNeeded):
        (WebCore::DetailsMarkerControl::shadowPseudoId): Deleted.
        (WebCore::DetailsMarkerControl::summaryElement): Deleted.
        * html/shadow/DetailsMarkerControl.h:
        (WebCore::DetailsMarkerControl::create): Deleted.

2014-07-30  Benjamin Poulain  <bpoulain@apple.com>

        Remove UploadButtonElement::shadowPseudoId()
        https://bugs.webkit.org/show_bug.cgi?id=135435

        Reviewed by Andreas Kling.

        Use the generic pseudo() path instead of a custom shadowPseudoId().

        * html/FileInputType.cpp:
        (WebCore::UploadButtonElement::create):
        (WebCore::UploadButtonElement::createForMultiple):
        (WebCore::UploadButtonElement::UploadButtonElement):
        Set the type in the common constructor instead of the call sites.
        (WebCore::UploadButtonElement::shadowPseudoId): Deleted.
        * html/FileInputType.h:

2014-07-30  Benjamin Poulain  <bpoulain@apple.com>

        Remove SpinButtonElement::shadowPseudoId
        https://bugs.webkit.org/show_bug.cgi?id=135436

        Reviewed by Andreas Kling.

        Use the generic pseudo.

        * html/shadow/SpinButtonElement.cpp:
        (WebCore::SpinButtonElement::SpinButtonElement):
        (WebCore::SpinButtonElement::shadowPseudoId): Deleted.